--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "nuxt-auth-utils",
+  "name": "@dworks/nuxt-auth-utils",
   "version": "0.0.26",
   "description": "Minimalist Auth module for Nuxt with SSR",
-  "repository": "Atinux/nuxt-auth-utils",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DWorkS/nuxt-auth-utils.git"
+  },
   "license": "MIT",
   "type": "module",
   "exports": {
